--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,12 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+    <view class="header-top"style="margin-top:{{(scale<0.55)? '0rpx':'-104rpx'}};margin-bottom:{{(scale<0.55)? '236rpx':'170rpx'}};">
+           
+        </view>
+        <button class='btn-fq ' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="my_fq">
+            下单
+        </button>
+        <view class='bottom-logo' >
+           
+        </view>
 </view>
