--- a/pages/order/writeOrder.wxml
+++ b/pages/order/writeOrder.wxml
@@ -1,13 +1,13 @@
 <!--pages/order/writeOrder.wxml-->
 <view> 
   
-  <view class="block" style="height:60px">
-   *被保险人 <input placeholder="请输入货主或货物得直接收益" maxlength="5" type="tel" bindinput="getInput" class='_input'/>  
+  <view class="block" style="height:60px"><text style='color:red'>*</text>
+   被保险人 <input placeholder="请输入货主或货物得直接收益" maxlength="5" type="tel" bindinput="getInput" class='_input'/>  
     <text space="ensp">\n 证件号</text>  <input placeholder="货主身份证或营业执照" maxlength="11" type="tel" bindinput="getInput" class='_input'/>  
   </view>
   <view class="block" style="height:60px">
      <text space="nbsp"> 投保产品\n\n</text>
-    *货物价值
+    <text style='color:red'>*</text>货物价值
     <input placeholder="请输入货物金额" maxlength="11" type="tel" bindinput="getInput" class='_input'/>
     <picker value="{{picker1Value}}" range="{{picker1Range}}" bindchange="normalPickerBindchange" class="_select">
          {{picker1Range[picker1Value]}}        <image class='down' src='../../images/insurance/down.png' style="height:{{(scale<0.55)? '30rpx':'30rpx'}};"  mode="aspectFit"></image>
@@ -17,50 +17,60 @@
 
   </view>
   <view class="block" style="height:190px">
-    *货物名称
+    <text style='color:red'>*</text>货物名称
     <textarea maxlength="120" type="string" bindinput="getInput" class='_textarea'></textarea> 
-    *货物包装及数量
+    <text style='color:red'>*</text>货物包装及数量
      <textarea maxlength="120" type="string" bindinput="getInput" class='_textarea'></textarea> 
-    *货物种类
-    <picker value="{{picker1Value}}" range="{{picker1Range}}" bindchange="normalPickerBindchange" class="_selectleft">
-         {{picker1Range[picker1Value]}}
+    <text style='color:red'>*</text>货物种类
+    <picker value="{{picker2Value}}" range="{{picker2Range}}" bindchange="normalPickerBindchange(picker2Value)" class="_selectleft">
+         {{picker2Range[picker2Value]}}
           <image class='down' src='../../images/insurance/down.png' style="height:{{(scale<0.55)? '30rpx':'30rpx'}};"  mode="aspectFit"></image>
     </picker>
 
   </view>
-  <view class="block" style="height:90px">
+  <view class="block" style="height:92px">
     <text space="ensp"> 运单号</text>
   <input placeholder="请输入运单号" maxlength="11" type="tel" bindinput="getInput" class='_input'/>  
-     <text>\n</text> *运输方式
-    <picker value="{{picker1Value}}" range="{{picker1Range}}" bindchange="normalPickerBindchange" class="_selectleft">
-         {{picker1Range[picker1Value]}}        <image class='down' src='../../images/insurance/down.png' style="height:{{(scale<0.55)? '30rpx':'30rpx'}};"  mode="aspectFit"></image>
+     <text style='color:red'>\n*</text>运输方式
+    <picker value="{{picker3Value}}" range="{{picker3Range}}" bindchange="normalPickerBindchange" class="_selectleft">
+         {{picker3Range[picker3Value]}}        <image class='down' src='../../images/insurance/down.png' style="height:{{(scale<0.55)? '30rpx':'30rpx'}};"  mode="aspectFit"></image>
     </picker>
     <text space="nbsp"> 车牌号</text>
   <input placeholder="请填写您的车牌号" maxlength="11" type="tel" bindinput="getInput" class='_input'/>  
   </view>
   <view class="block" style="height:180px">
-    *<text>起运日期\n</text>
-    <picker mode="date" value="{{dateValue}}" start="1999-01-01" end="2999-12-12" bindchange="datePickerBindchange" class="_date">{{dateValue}}
+    <text style='color:red'>*</text><text>起运日期\n</text>
+    <picker mode="date" value="{{dateValue}}" start="1999-01-01" end="2999-12-12" bindchange="datePickerBindchange" class="_date">             {{dateValue}}
     </picker>
 
-
-
     <text space="ensp">\n 起运地</text>
-     <picker value="{{picker1Value}}" range="{{picker1Range}}" bindchange="normalPickerBindchange" class="_selectleft">
-         {{picker1Range[picker1Value]}}         <image class='down' src='../../images/insurance/down.png' style="height:{{(scale<0.55)? '30rpx':'30rpx'}};"  mode="aspectFit"></image>
+     <picker value="{{picker4Value}}" range="{{picker4Range}}" bindchange="normalPickerBindchange" class="_selectleft">
+         {{picker4Range[picker4Value]}}         <image class='down' src='../../images/insurance/down.png' style="height:{{(scale<0.55)? '30rpx':'30rpx'}};"  mode="aspectFit"></image>
     </picker>
     <input placeholder="请输入详细地址" maxlength="11" type="tel" bindinput="getInput" class="address_input"/>  
     <text space="ensp"> 中转地</text>
     <input placeholder="中转地" maxlength="11" type="tel" bindinput="getInput" class='_input'/> 
     <text space="ensp">\n 目得地</text>
-     <picker value="{{picker1Value}}" range="{{picker1Range}}" bindchange="normalPickerBindchange" class="_selectleft">
-         {{picker1Range[picker1Value]}}        <image class='down' src='../../images/insurance/down.png' style="height:{{(scale<0.55)? '30rpx':'30rpx'}};"  mode="aspectFit"></image>
+     <picker value="{{picker5Value}}" range="{{picker5Range}}" bindchange="normalPickerBindchange" class="_selectleft">
+         {{picker5Range[picker5Value]}}        <image class='down' src='../../images/insurance/down.png' style="height:{{(scale<0.55)? '30rpx':'30rpx'}};"  mode="aspectFit"></image>
     </picker>
     <input placeholder="请输入详细地址" maxlength="11" type="tel" bindinput="getInput" class="address_input"/>  
   </view>
   <view class="block" style="height:450px">
-    *<text>主险险种\n\n</text>
+    <text style='color:red'>*</text><text>主险险种\n\n</text>
+     <picker value="{{picker6Value}}" range="{{picker6Range}}" bindchange="normalPickerBindchange" class="_selectleft" style="margin-top:-33px">
+         {{picker6Range[picker6Value]}}        <image class='down' src='../../images/insurance/down.png' style="height:{{(scale<0.55)? '30rpx':'30rpx'}};margin-left:65px;"  mode="aspectFit"></image>
+    </picker>
     <text space="nbsp">  特别约定</text>  
     <textarea maxlength="120" type="string" bindinput="getInput" class="_textarea" id="specil_textarea"></textarea> 
+  </view>
+
+  <view class="page_hd" style="position:fixed; bottom:0;width: 750rpx;">
+      <button class=".page_hd_ch" style="position:fixed; bottom:0;background-color: rgb(0, 153, 255);width: 90px;margin-left:210px;">
+       信息暂存
+      </button>
+      <button class=".page_hd_ch" style="position:fixed; bottom:0;background-color: rgb(0, 100, 255);width: 90px;margin-left: 300px;padding-right: 28px;">
+       支付
+      </button>
   </view>
 </view>
