--- a/pages/order/writeOrder.wxml
+++ b/pages/order/writeOrder.wxml
@@ -27,6 +27,9 @@
     <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
     <text>终点</text>
     <input bindinput="getInput" class='_input' value='{{arrCity}}'/>
+     <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
+    <text>行李牌号码</text>
+    <input bindinput="markInput" class='_input'/>
   </view>
 
    <view class='message' >
@@ -44,7 +47,7 @@
   <view class="page_hd">
     <view style='position:fixed;margin-left:100px;margin-top:10px;font-size:25px;color:rgba(18, 194, 97, 0.774);'>{{total_fee}}</view>   
 
-       <button class="page_hd_ch" style="position:fixed;right:10px;bottom:0px;background-color: rgba(18, 194, 97, 0.774);width:35%;margin-bottom:10px;" open-type="getUserInfo" bindtap='pay'>
+       <button class="page_hd_ch" style="position:fixed;right:10px;bottom:0px;background-color: rgba(18, 194, 97, 0.774);width:35%;margin-bottom:10px;" open-type="getUserInfo" bindtap='paycheck'>
         立即投保
         </button>
   </view>
