--- a/pages/order/writeOrder.wxml
+++ b/pages/order/writeOrder.wxml
@@ -3,6 +3,7 @@
    <view>
       <image src="../../images/insurance/order_top.png" style='height:50px;width:100%;margin-top:5px' />
   </view>
+  <form bindsubmit="formSubmit" bindreset="formReset">
   <view class='message'>
     <text>被保人姓名\n</text>
     <input placeholder="请填写本人身份信息，不可更改" bindinput ="userNameInput" class='_input' />
@@ -20,19 +21,25 @@
     </picker>
     <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
     <text>航班号</text>
-    <input maxlength='6' bindinput="flightNoInput" class='_input' value='{{flightNo}}' bindblur='getCity'/>
+    <input maxlength='6' bindinput="flightNoInput" class='_input' value='{{flightNo}}'/>
         <image src="../../images/insurance/scan.png" style='height:25px;width:25px;margin-left:280px;z-index:10' bindtap='scanFlight'></image>
 
   <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
     <text>起点</text>
-    <input bindinput="getInput" class='_input' value='{{depCity}}'/>
+    <input bindinput="getInputStart" class='_input' value='{{depCity}}'/>
     <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
     <text>终点</text>
-    <input bindinput="getInput" class='_input' value='{{arrCity}}'/>
+    <input bindinput="getInputEnd" class='_input' value='{{arrCity}}' bindblur='getPrice'/>
      <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
     <text>行李牌号码</text>
-    <input bindinput="markInput" class='_input' value='{{markNumber}}'/>
-    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;margin-left:280px;z-index:10' bindtap='scanPackage'></image>
+    <input bindinput="markInput" data-index="{{2}}" class='_input' name="markN"  value="{{pack1}}"/>
+    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;margin-left:280px;z-index:10' bindtap='scanPackage1'></image>
+     <text>行李牌号码</text>
+    <input bindinput="markInput" class='_input' name="markN" value='{{pack2}}'/>
+    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;margin-left:280px;z-index:10' bindtap='scanPackage2'></image>
+     <text>行李牌号码</text>
+    <input bindinput="markInput" class='_input' name="markN" value='{{pack3}}'/>
+    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;margin-left:280px;z-index:10' bindtap='scanPackage3'></image>
   </view>
 
    <view class='message' >
@@ -42,7 +49,7 @@
   <image src="../../images/insurance/yes.png" style='height:30px;width:30px;margin-bottom:9px;margin-left:10px;'></image>
     <view style='margin-top:-37px;margin-left:43px;height:120px'>
     我同意
-    <text style='color:rgba(18, 194, 97, 0.774)'>《投保须知》</text>  和
+    <text style='color:rgba(18, 194, 97, 0.774)' bindtap='instructions'>《投保须知》</text>  和
     <text style='color:rgba(18, 194, 97, 0.774)'>《保险适用条款》</text> 
     </view>
 
@@ -50,8 +57,10 @@
   <view class="page_hd">
     <view style='position:fixed;margin-left:100px;margin-top:10px;font-size:25px;color:rgba(18, 194, 97, 0.774);'>{{total_fee*0.01}}￥</view>   
 
-       <button class="page_hd_ch" style="position:fixed;right:10px;bottom:0px;background-color: rgba(18, 194, 97, 0.774);width:35%;margin-bottom:10px;" open-type="getUserInfo" bindtap='paycheck'>
+       <button class="page_hd_ch" style="position:fixed;right:10px;bottom:0px;background-color: rgba(18, 194, 97, 0.774);width:35%;margin-bottom:10px;" open-type="getUserInfo" formType="submit" bindtap='paycheck'>
         立即投保
         </button>
   </view>
+
+  </form>
 </view>
