--- a/pages/order/writeOrder.wxml
+++ b/pages/order/writeOrder.wxml
@@ -6,45 +6,54 @@
   <form bindsubmit="formSubmit" bindreset="formReset">
   <view class='message'>
     <text>被保人姓名\n</text>
-    <input placeholder="请填写本人身份信息，不可更改" bindinput ="userNameInput" class='_input' />
+    <input placeholder="请填写本人身份信息，不可更改"  class='_input' name="userName"/>
     <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
     <text>身份证号\n</text>
-    <input bindinput="userIdInput" bindblur='checkuserId' maxlength='18' class='_input'/>
+    <input maxlength='18' class='_input' name="userId"/>
     <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
     <text>航班日期\n</text>
-     <picker mode="date" value="{{flightDate}}" start="{{start}}" end="2999-12-12" bindchange="datePickerBindchange" bindtouchend='checkDate' class="_date">
+     <picker mode="date" value="{{flightDate}}" start="{{start}}" end="2999-12-12" bindchange="datePickerBindchange" bindtouchend='checkDate' class="_date" name="flightDate">
         <view>
           <text style='position:relative;bottom:7px;'> {{flightDate}} </text> 
           <image src="../../images/insurance/down.png" style='height:20px;width:30px;position:relative;left:200px'></image>
         </view>
-       
     </picker>
     <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
-    <text>航班号</text>
-    <input maxlength='6' bindinput="flightNoInput" class='_input' value='{{flightNo}}'/>
-        <image src="../../images/insurance/scan.png" style='height:25px;width:25px;margin-left:280px;z-index:10' bindtap='scanFlight'></image>
 
-  <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
+
+
+    <text>航班号</text>
+    <input maxlength='6' class='_input' value='{{flightNo}}' name="flightNo"/>
+    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanFlight'></image>
+
+    <image src="../../images/insurance/line.png" style='height:2px;width:98%;'></image>
     <text>起点</text>
-    <input bindinput="getInputStart" class='_input' value='{{depCity}}'/>
+    <input  class='_input' value='{{depCity}}' name="depCity" bindinput='startInput'/>
     <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
     <text>终点</text>
-    <input bindinput="getInputEnd" class='_input' value='{{arrCity}}' bindblur='getPrice'/>
+    <input  class='_input' value='{{arrCity}}' bindblur='getPrice' name="arrCity" bindinput='endInput'/>
      <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
-    <text>行李牌号码</text>
-    <input bindinput="markInput" data-index="{{2}}" class='_input' name="markN"  value="{{pack1}}"/>
-    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;margin-left:280px;z-index:10' bindtap='scanPackage1'></image>
-     <text>行李牌号码</text>
-    <input bindinput="markInput" class='_input' name="markN" value='{{pack2}}'/>
-    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;margin-left:280px;z-index:10' bindtap='scanPackage2'></image>
-     <text>行李牌号码</text>
-    <input bindinput="markInput" class='_input' name="markN" value='{{pack3}}'/>
-    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;margin-left:280px;z-index:10' bindtap='scanPackage3'></image>
+    <text>行李牌号码\n
+    </text>
+   <input data-index="{{2}}" class='_input' name="mark1"  value="{{pack1}}"/>
+    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage1'></image>
+     <text>行李牌号码\n</text>
+    <input class='_input' name="mark2" value='{{pack2}}'/>
+    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage2'></image>
+     <text>行李牌号码\n</text>
+    <input class='_input' name="mark3" value='{{pack3}}'/>
+    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage3'></image>
+     <text>行李牌号码\n</text>
+    <input class='_input' name="mark4" value='{{pack4}}'/>
+    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage4'></image>
+     <text>行李牌号码\n</text>
+    <input class='_input' name="mark5" value='{{pack5}}'/>
+    <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage5'></image>
   </view>
 
    <view class='message' >
     <text>手机号\n</text>
-    <input placeholder="用于接收订单相关信息" maxlength='11' bindinput="telNumberInput" bindblur='blurPhone' class='_input' style='width:180px'/>
+    <input placeholder="用于接收订单相关信息" maxlength='11' bindinput="telNumberInput" bindblur='blurPhone' class='_input' style='width:180px' name="telNumber"/>
   </view>
   <image src="../../images/insurance/yes.png" style='height:30px;width:30px;margin-bottom:9px;margin-left:10px;'></image>
     <view style='margin-top:-37px;margin-left:43px;height:120px'>
@@ -55,9 +64,9 @@
 
 
   <view class="page_hd">
-    <view style='position:fixed;margin-left:100px;margin-top:10px;font-size:25px;color:rgba(18, 194, 97, 0.774);'>{{total_fee*0.01}}￥</view>   
+    <view style='position:fixed;margin-left:100px;margin-top:10px;font-size:25px;color:rgba(18, 194, 97, 0.774);'>{{showPrice*0.01}}￥</view>   
 
-       <button class="page_hd_ch" style="position:fixed;right:10px;bottom:0px;background-color: rgba(18, 194, 97, 0.774);width:35%;margin-bottom:10px;" open-type="getUserInfo" formType="submit" bindtap='paycheck'>
+       <button class="page_hd_ch" style="position:fixed;right:10px;bottom:0px;background-color: rgba(18, 194, 97, 0.774);width:35%;margin-bottom:10px;" formType="submit">
         立即投保
         </button>
   </view>
