--- a/pages/order/writeOrder.wxml
+++ b/pages/order/writeOrder.wxml
@@ -35,19 +35,19 @@
      <image src="../../images/insurance/line.png" style='height:2px;width:98%;margin-bottom:9px;'></image>
     <text>行李牌号码\n
     </text>
-   <input data-index="{{2}}" class='_input' name="mark1"  value="{{pack1}}"/>
+   <input data-index="{{2}}" class='_input' name="mark1"  value="{{pack1}}" bindblur='p1blur'/>
     <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage1'></image>
      <text>行李牌号码\n</text>
-    <input class='_input' name="mark2" value='{{pack2}}'/>
+    <input class='_input' name="mark2" value='{{pack2}}' bindblur='p2blur'/>
     <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage2'></image>
      <text>行李牌号码\n</text>
-    <input class='_input' name="mark3" value='{{pack3}}'/>
+    <input class='_input' name="mark3" value='{{pack3}}' bindblur='p3blur'/>
     <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage3'></image>
      <text>行李牌号码\n</text>
-    <input class='_input' name="mark4" value='{{pack4}}'/>
+    <input class='_input' name="mark4" value='{{pack4}}' bindblur='p4blur'/>
     <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage4'></image>
      <text>行李牌号码\n</text>
-    <input class='_input' name="mark5" value='{{pack5}}'/>
+    <input class='_input' name="mark5" value='{{pack5}}' bindblur='p5blur'/>
     <image src="../../images/insurance/scan.png" style='height:25px;width:25px;' bindtap='scanPackage5'></image>
   </view>
 
