--- a/pages/detail/showDetail.wxml
+++ b/pages/detail/showDetail.wxml
@@ -1,25 +1,126 @@
 <!--pages/detail/showDetail.wxml-->
-<view class='bg'>
-  <view>
-      <image src="../../images/insurance/detail_top.png" style='height:140px;width:100%' />
-  </view>
-  <view>
-      <image src="../../images/insurance/detail_insurance.png" style='height:120px;width:100%;margin-top:3px' />
-  </view>
-  <view>
-       <image src="../../images/insurance/detail_message.png" style='height:170px;width:100%;margin-top:3px' />
-  </view>
-  <view>
-       <image src="../../images/insurance/detail_show1.png" style='height:500px;width:100%;margin-top:3px' />
-  </view>
-
-
-  <view class="page_hd">
-         <view style='position:fixed;margin-left:100px;margin-top:10px;font-size:25px;color:rgba(18, 194, 97, 0.774);'> {{price*0.01}}￥</view>   
-        <button class="page_hd_ch" style="position:fixed;right:10px;bottom:0px;background-color: rgba(18, 194, 97, 0.774);width:35%;margin-bottom:10px;" open-type="getUserInfo" bindgetuserinfo='to_insured'>
-        立即投保
+<view class='bg' style='{{pageStyle}}'>
+    <view class="page__bd">
+        <view class="weui-tab">
+            <view class="weui-navbar">
+                <block wx:for="{{tabs}}" wx:key="*this">
+                    <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
+                        <view class="weui-navbar__title">{{item}}</view>
+                    </view>
+                </block>
+                <view class="weui-navbar__slider" style="left: {{sliderLeft}}rpx; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view>
+            </view>
+            <view class="weui-tab__panel">
+                <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
+                    <view style='margin-top:17rpx;margin-bottom:-16rpx;'>
+                        <image src="../../images/showDetail/fly_xl_banner.png" style='height:298rpx;width:100%' />
+                    </view>
+                    <view>
+                        <view class="weui-flex">
+                            <view class="weui-flex__item">
+                                <view class="placeholder">国内</view>
+                                <view class="placeholder">承保范围</view>
+                            </view>
+                            <view class="weui-flex__item">
+                                <view class="placeholder">单次飞行</view>
+                                <view class="placeholder">保障期限</view>
+                            </view>
+                            <view class="weui-flex__item">
+                                <view class="placeholder">18-80岁</view>
+                                <view class="placeholder">保障年龄</view>
+                            </view>
+                        </view>
+                    </view>
+                    <view>
+                        <view class="weui-cells weui-cells_after-title">
+                            <view class="weui-cell">
+                                <view class='title_bx'>保障险情</view>
+                            </view>    
+                            <view class="weui-cell">
+                                <view class="weui-cell__bd">国内托运行李意外丢失最高赔付</view>
+                                <view class="weui-cell__ft">1000元</view>
+                            </view>
+                            <view class="weui-cell">
+                                <view class="weui-cell__bd">国内托运行李损失保障赔付</view>
+                                <view class="weui-cell__ft">500元</view>
+                            </view>
+                            <view class="weui-cell">
+                                <view class="weui-cell__bd">国内托运行李箱体损失赔付</view>
+                                <view class="weui-cell__ft">200元</view>
+                            </view>
+                            <view class="weui-cell">
+                                <view class="weui-cell__bd">国内行李迟运赔付</view>
+                                <view class="weui-cell__ft">100元</view>
+                            </view>
+                        </view>
+                    </view>
+                    <view class="mar_b" style='overflow:hidden;'>
+                        <image class="mar_b" src="../../images/showDetail/fly_xl_gn.png" style='height:953rpx;width:105%;margin-top:3px;' />
+                    </view>
+                </view>
+                <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
+                    <view style='margin-top:17rpx;margin-bottom:-16rpx;'>
+                        <image src="../../images/showDetail/fly_gj_banner.png" style='height:298rpx;width:100%' />
+                    </view>
+                    <view>
+                        <view class="weui-flex">
+                            <view class="weui-flex__item">
+                                <view class="placeholder">国内</view>
+                                <view class="placeholder">承保范围</view>
+                            </view>
+                            <view class="weui-flex__item">
+                                <view class="placeholder">单次飞行</view>
+                                <view class="placeholder">保障期限</view>
+                            </view>
+                            <view class="weui-flex__item">
+                                <view class="placeholder">18-80岁</view>
+                                <view class="placeholder">保障年龄</view>
+                            </view>
+                        </view>
+                    </view>
+                    <view>
+                        <view class="weui-cells weui-cells_after-title">
+                            <view class="weui-cell">
+                                <view class='title_bx'>保障险情</view>
+                            </view>
+                            <view class="weui-cell">
+                                <view class="weui-cell__bd">国内航班延误最高赔付</view>
+                                <view class="weui-cell__ft">70元</view>
+                            </view>
+                            <view class="weui-cell">
+                                <view class="weui-cell__bd">国内托运行李损失保障赔付</view>
+                                <view class="weui-cell__ft">500元</view>
+                            </view>
+                            <view class="weui-cell">
+                                <view class="weui-cell__bd">国内托运行李箱体损失赔付 </view>
+                                <view class="weui-cell__ft">200元</view>
+                            </view>
+                            <view class="weui-cell">
+                                <view class="weui-cell__ft">（最高赔偿至延误到达6小时）</view>
+                             </view>
+                            <view class="weui-cell">
+                                <view class="weui-cell__bd">航空意外身故及伤残</view>
+                                <view class="weui-cell__ft">500万</view>
+                            </view>
+                        </view>
+                    </view>
+                    <view class="mar_b" style='overflow:hidden;'>
+                        <image src="../../images/showDetail/gj_pf.png" style='height:222rpx;width:100%;margin-top:3px;' />
+                        <image class="mar_b" src="../../images/showDetail/gj_qx.png" style='height:222rpx;width:100%;margin-top:3px;' />
+                    </view>
+                </view>
+            </view>
+        </view>
+    </view>
+    <view class="page_hd">
+        <view class='price_cc'>
+            <text>￥ </text>
+            <text class="price_sty"> {{price*0.01}}</text>
+        </view>
+        <button class="page_hd_ch" style="position:fixed;right:10px;bottom:0px;" open-type="getUserInfo" bindgetuserinfo='to_insured'>
+            立即投保 >
         </button>
-  </view>
+    </view>
 
 
 
