--- a/pages/order/writeOrder.wxss
+++ b/pages/order/writeOrder.wxss
@@ -1,31 +1,182 @@
 /* pages/order/writeOrder.wxss */
+
 .order_bg {
-  font-size: 15px;
+    font-size: 15px;
+    background-color: #f5f5f5;
+    height: 100%;
 }
+
+.mar_tb {
+    margin-top: 23rpx;
+    margin-bottom: 23rpx;
+}
+
+.xy_sty {
+    letter-spacing: 2px;
+    color: #2e66c3;
+}
+
+checkbox {
+    margin-left: 29rpx;
+}
+
+checkbox .wx-checkbox-input {
+    border-radius: 3rpx;
+    height: 28rpx;
+    width: 30rpx;
+    margin-top: -4rpx;
+}
+
+checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
+    background-color: #2e66c3;
+    color: #fff;
+}
+
+.checkbox {
+    font-size: 24rpx;
+}
+
+.bg_none {
+    background-color: #f5f5f5 !important;
+}
+
+.peo_xx {
+    display: flex;
+    flex-direction: row;
+    padding-left: 24rpx;
+    font-size: 30rpx;
+    font-weight: 700;
+    background-color: #fff;
+}
+
+.left_tiao {
+    width: 6rpx;
+    height: 38rpx;
+    background-color: #2e66c3;
+    margin-right: 18rpx;
+}
+
+.weui-cell {
+    width: 100%;
+}
+
+.peo_xx_left {
+    width: 30%;
+    font-size: 26rpx;
+    color: #222;
+    letter-spacing: 2px;
+}
+
+.peo_xx_right {
+    width: 62%;
+}
+
+.title_sty {
+    width: 70% !important;
+    font-size: 20rpx;
+}
+
+.title_sty1 {
+    width: 65% !important;
+    font-size: 20rpx;
+}
+
+.dh_sty {
+    color: #222;
+    font-size: 26rpx;
+    text-align: right;
+}
+
+.left_sty {
+    width: 50% !important;
+}
+
+.dh_sty image {
+    width: 30rpx;
+    height: 30rpx;
+    vertical-align: middle;
+    display: inline-block;
+    margin-top: -3rpx;
+}
+
+.title_sty>image {
+    width: 30rpx;
+    height: 30rpx;
+    margin-left: 16rpx;
+}
+
+.title_sty1>image {
+    width: 30rpx;
+    height: 30rpx;
+    margin-left: 16rpx;
+}
+
+.weui-cells:before {
+    border: none;
+}
+
+.weui-cells::after {
+    border: none;
+}
+
+.weui-cell:before {
+    border: none;
+}
+
 ._input {
-  width: 250px;
-  margin-top: -20px;
-  margin-left: 95px;
-  font-size: 14px;
+    width: 100%;
+    font-size: 26rpx;
 }
+
 .message {
-  background-color: white;
-  margin-bottom: 5px;
-  padding: 15px;
+    background-color: white;
+    margin-bottom: 5px;
+    padding: 15px;
 }
+
 .down {
-  position: relative;
-  top: -14px;
-  left: -100px;
+    position: relative;
+    top: -14px;
+    left: -100px;
 }
+
 ._date {
-  margin-left: 90px;
-  margin-top: -17px;
+    margin-left: 90px;
+    margin-top: -17px;
 }
 
 .page_hd_ch {
-  height: 38px;
-  color: white;
-  font-size: 15px;
-  border-radius: 2px; 
+    height: 38px;
+    color: white;
+    font-size: 15px;
+    border-radius: 2px;
+}
+.price_cc {
+    position: fixed;
+    margin-left: 32rpx;
+    margin-top: 10rpx;
+    font-size: 24rpx;
+    color: #fff;
+    width:57%;
+    border-right: 1px solid #ddd; 
+}
+.price_sty {
+    font-size: 48rpx;
+}
+.page_hd_ch {
+    width: 35%;
+    height: 100rpx;
+    background-color: #2E66C3;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 0;
+    line-height: 90rpx;
+    padding: 0;
+    margin: 0;
+}
+.page_hd_ch::after{
+    border: none;
+}
+.page_hd{
+    background-color: #2E66C3!important;
 }
