--- a/pages/order/writeOrder.wxml
+++ b/pages/order/writeOrder.wxml
@@ -27,7 +27,7 @@
          <view class="weui-cell">
             <view class="peo_xx_left">手机号码</view>
             <view class="weui-cell__ft peo_xx_right">
-                <input placeholder="请输入手机号" class='_input'  name="telNumber" maxlength='11' value='{{telNumber}}' bindblur='blurPhone'/>
+                <input placeholder="请输入手机号" class='_input'  name="telNumber" maxlength='11' value='{{telNumber}}' bindblur='blurPhone' bindinput='telNumberInput'/>
             </view>
         </view>
     </view>
