--- a/pages/detail/showDetail.wxml
+++ b/pages/detail/showDetail.wxml
@@ -73,7 +73,7 @@
                                 <view class="placeholder">保障期限</view>
                             </view>
                             <view class="weui-flex__item">
-                                <view class="placeholder">0-10 0岁</view>
+                                <view class="placeholder">0-100岁</view>
                                 <view class="placeholder">保障年龄</view>
                             </view>
                         </view>
